[package]
name = "tlsn-server"
version = "0.1.0"
edition = "2024"
description = "TLSNotary Notary Server for alpha 14"
license = "MIT OR Apache-2.0"

[lib]
name = "tlsn_server"
path = "src/lib.rs"

[[bin]]
name = "tlsn-server"
path = "src/main.rs"

[dependencies]
# TLSNotary
tlsn = { git = "https://github.com/tlsnotary/tlsn.git", tag = "v0.1.0-alpha.14", features = ["mozilla-certs"] }

# HTTP server
axum = { version = "0.7", features = ["ws"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
axum-core = "0.4"
http = "1.0"
hyper = "1.0"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors"] }
hyper-util = { version = "0.1", features = ["tokio"] }

# WebSocket
ws_stream_tungstenite = "0.14"
async-tungstenite = { version = "0.28", features = ["tokio-runtime"] }
futures-util = "0.3"
async-trait = "0.1"

# Cryptography
k256 = "0.13"
rand = "0.8"
sha1 = "0.10"
base64 = "0.22"
hex = "0.4"

# Serialization
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
eyre = "0.6"

# Utilities
tokio-util = { version = "0.7", features = ["compat"] }
uuid = { version = "1.0", features = ["v4"] }
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
tlsn-server-fixture = { git = "https://github.com/tlsnotary/tlsn.git", tag = "v0.1.0-alpha.14" }
tlsn-server-fixture-certs = { git = "https://github.com/tlsnotary/tlsn.git", tag = "v0.1.0-alpha.14" }
tlsn-formats = { git = "https://github.com/tlsnotary/tlsn.git", tag = "v0.1.0-alpha.14" }
http-body-util = "0.1"
anyhow = "1.0"
